Bug 47462 - xwd should check for libXt, libxkbfile in configure.ac
Summary: xwd should check for libXt, libxkbfile in configure.ac
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: App/xwd (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-17 18:52 UTC by Chí-Thanh Christopher Nguyễn
Modified: 2018-06-17 19:49 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Chí-Thanh Christopher Nguyễn 2012-03-17 18:52:07 UTC
i686-pc-linux-gnu-gcc -std=gnu99 -DHAVE_CONFIG_H -I. -I/var/tmp/portage/x11-apps/xwd-1.0.5/work/xwd-1.0.5    -Wall -Wpointer-arith -Wstrict-prototypes -Wmissing-prototypes -Wmissing-declarations -Wnested-externs -Wbad-function-cast -Wformat=2 -Wold-style-definition -Wdeclaration-after-statement -Wunused -Wuninitialized -Wshadow -Wcast-qual -Wmissing-noreturn -Wmissing-format-attribute -Wredundant-decls -Werror=implicit -Werror=nonnull -Werror=init-self -Werror=main -Werror=missing-braces -Werror=sequence-point -Werror=return-type -Werror=trigraphs -Werror=array-bounds -Werror=write-strings -Werror=address -Werror=int-to-pointer-cast -Werror=pointer-to-int-cast -fno-strict-aliasing  -Os -march=pentium4 -pipe -fomit-frame-pointer -c /var/tmp/portage/x11-apps/xwd-1.0.5/work/xwd-1.0.5/xwd.c
/var/tmp/portage/x11-apps/xwd-1.0.5/work/xwd-1.0.5/multiVis.c:41:27: fatal error: X11/Intrinsic.h: No such file or directory
compilation terminated.
make[2]: *** [multiVis.o] Error 1

Intrinsic.h is part of libXt, its presence should be checked by configure.
Comment 1 Chí-Thanh Christopher Nguyễn 2012-03-17 21:02:47 UTC
Same for XKBbells.h from libxkbfile
Comment 2 Alan Coopersmith 2012-03-19 13:20:56 UTC
We don't really need libXt, just to rearrange definitions to avoid the
need for <X11/Intrinsics.h> for a single typedef:

http://patchwork.freedesktop.org/patch/9577/

XKB needs special handling, since that code is only built when XKB is 
defined, which it currently never is:

http://patchwork.freedesktop.org/patch/9578/
Comment 3 Alan Coopersmith 2012-03-22 23:25:31 UTC
Both patches pushed to git master now, so marking as fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.