Move Pixel typedef from xwd.c to wsutils.h

Removes need for including <X11/Intrinsic.h> in multiVis.c just to get
the Pixel typedef, which resolves
https://bugs.freedesktop.org/show_bug.cgi?id=47462 without adding a
dependency on libXt.

Signed-off-by: Alan Coopersmith <alan.coopersmith@oracle.com>
Reviewed-by: Jeremy Huddleston <jeremyhu@apple.com>